[gd_scene load_steps=9 format=2]

[ext_resource path="res://assets/Game BG.png" type="Texture" id=1]
[ext_resource path="res://assets/fonts/bender-bold.otf" type="DynamicFontData" id=2]
[ext_resource path="res://scenes/Menus/AccountManagement/Login.gd" type="Script" id=3]
[ext_resource path="res://scenes/UiElements/MenuBtn.tscn" type="PackedScene" id=4]
[ext_resource path="res://scenes/UiElements/CustomLineEdit.tscn" type="PackedScene" id=5]

[sub_resource type="StyleBoxTexture" id=4]
texture = ExtResource( 1 )
region_rect = Rect2( 0, 0, 600, 1042 )
margin_left = 45.4385
margin_right = 44.0361
margin_top = 44.5727
margin_bottom = 45.158

[sub_resource type="Theme" id=2]
Panel/styles/panel = SubResource( 4 )

[sub_resource type="DynamicFont" id=3]
size = 50
font_data = ExtResource( 2 )

[node name="Login" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( -104, 456 )
script = ExtResource( 3 )

[node name="BGLayer" type="CanvasLayer" parent="."]

[node name="BG" type="Panel" parent="BGLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = SubResource( 2 )

[node name="LoginTitle" type="Label" parent="BGLayer"]
anchor_left = 0.5
anchor_top = 0.044
anchor_right = 0.5
anchor_bottom = 0.044
margin_left = -165.5
margin_top = 7.68
margin_right = 165.5
margin_bottom = 62.68
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 3 )
text = "Login Account"
align = 1

[node name="LogInputs" type="CanvasLayer" parent="."]

[node name="VBoxLogin" type="VBoxContainer" parent="LogInputs"]
anchor_left = 0.089
anchor_top = 0.162
anchor_right = 0.911
anchor_bottom = 0.587
margin_left = -0.0800018
margin_top = 0.639999
margin_right = 0.0799561
margin_bottom = 0.640015
custom_constants/separation = 68

[node name="EmailContainer" parent="LogInputs/VBoxLogin" instance=ExtResource( 5 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 592.0
margin_bottom = 238.0
size_flags_vertical = 3

[node name="PasswordContainer" parent="LogInputs/VBoxLogin" instance=ExtResource( 5 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 306.0
margin_right = 592.0
margin_bottom = 544.0
size_flags_vertical = 3

[node name="LoginAcc" parent="LogInputs" instance=ExtResource( 4 )]
anchor_left = 0.265
anchor_top = 0.655
anchor_right = 0.732
anchor_bottom = 0.736
margin_left = 0.199982
margin_top = -0.400024
margin_right = -0.0400391
margin_bottom = -0.0800781
text = "Login"

[node name="HTTPRequest" type="HTTPRequest" parent="."]

[connection signal="pressed" from="LogInputs/LoginAcc" to="." method="_on_LoginAcc_pressed"]
[connection signal="request_completed" from="HTTPRequest" to="." method="_on_HTTPRequest_request_completed"]
